# libemu

./: APIReference.md  CPUFunctions.md  ComputerTutorial.md  GeneralFunctions.md  Makefile.in  ProjectHome.md  README  Screenhots.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
doc/: Anteprojeto.odt  api.txt  ciclo.odg  ciclo.svm  estrutura_tc.txt  estrutura_tc.txt~  imagem_atari.odg  laco_emulador.odg  laco_emulador.svm  mapa_memoria.svm  memoria.svm  niveis_abstracao.odg  niveis_abstracao.svm  novo.svm  overhead.svm  raster.svm  sincronizacao.odg  tc1.odt  tiles_sprites.svm  tipos.odg  tipos.svm  webresources.txt
examples/: Makefile.am  Makefile.in
examples/atari2600/: 2600.c  6502.c  Makefile.in  atari2600.c  pia.c  tia.c  tia.h  tiac.c  tiap.c
examples/atari2600/atari-src/: clinck.s
examples/atari2600/src-atari/: buffer.s  combat.s  happy2.s  kernel1.s  kernel2.s  kernel3.s  kernel4b.s  playfield.s  test.s
examples/atari2600/teste/: 6digit.s  collision.s  respx.xls  timer.s
examples/tutorial/: Makefile.am  Makefile.in  libemu.c  x21.c
pixmaps/: pixmaps.c  temp.txt
src/: Makefile.in
src/compiler/: Makefile.in  emucheck.c  emutouch.in
src/compiler/templates/: Makefile.in  device.c  generic.c  video.c
src/lib/: Makefile.am  Makefile.in  cpu.c  generic.c  joystick.c  libdefs.h  libdev.h  libemu.c  libemu.h  other.c  other.h  ram.c  rom.c  tags  video.c
trunk/: Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac
trunk/doc/: Anteprojeto.odt  api.txt  estrutura_tc.txt  futebol_pele.odg  futebol_pele.svm  imagem.odg  imagem.svm  imagem_atari.svm  laco_emulador.odg  mapa_memoria.odg  memoria.odg  niveis_abstracao.odg  niveis_abstracao.svm  novo.odg  overhead.odg  raster.odg  sincronizacao.svm  tc1.odt  temporizacao.odg  temporizacao.svm  tiles_sprites.odg  tradicional.odg  tradicional.svm
trunk/examples/: Makefile.am  Makefile.in
trunk/examples/atari2600/: 6502.c  Makefile.am  Makefile.in  atari2600.c  pia.c  temp.c  tia.c  tia.h  tiac.c  tiap.c
trunk/examples/atari2600/src-atari/: happy.s  kernel4.s  kernel4d.s  kernel5.s  simple.s
trunk/examples/atari2600/teste/: bigmove.s  bk.s  paddle.s  respx.s
trunk/examples/tutorial/: Makefile.in  libemu.c
trunk/src/: Makefile.in
trunk/src/compiler/: Makefile.am  Makefile.in  emucc.in  emucheck.c  tags
trunk/src/compiler/templates/: Makefile.am  Makefile.in  cpu.c  video.c
trunk/src/lib/: Makefile.am  Makefile.in  cpu.c  generic.c  joystick.c  libdefs.h  libdev.h  libemu.c  libemu.h  other.c  other.h  ram.c  rom.c  video.c
trunk/temp/: temp.glade  temp.gladep
wiki/: APIReference.wiki  CPUFunctions.wiki  ComputerTutorial.wiki  Documentation.wiki  GeneralFunctions.wiki  Screenhots.wiki
